# bmp24

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  bitmap.c  bitmap.h  gaussian.c  gaussian.h  main.c  mat.c  mat.h  median.c  median.h
